--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="module" src="JavaScript/navbar.js"></script>
+    <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>ViCoDa</title>
 </head>
 <body>
-  <h1>This is the landing page for the coronavirus data visualization website 'ViCoDa'</h1>   
+  <header>
+    <nav class="navbar" id="myNav">
+      <a href="References/" >References</a>
+      <a href="CreativeWork/">Creative Work</a>
+      <article class="dropdown">
+        <button class="dropbtn">Blogs 
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <section class="ddc">
+          <a href="#">Reflection: Chapter 1(Theories of Representation)</a>
+          <a href="#">Analysis: Historic Data Visualisation</a>
+          <a href="#">More coming soon</a>
+        </section>
+      </article> 
+      <a href="#" class="active">Home</a>
+      <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+    </nav>
+  </header>
 </body>
 </html>
