--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="navbar" id="myNav">
       <a href="References/" >References</a>
-      <a href="CreativeWork/">Creative Work</a>
+      <a href="CreativeWork/" class="active">Creative Work</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
@@ -22,7 +22,7 @@
           <a href="#">More coming soon</a>
         </section>
       </article> 
-      <a href="#" class="active">Home</a>
+      <a href="#">Home</a>
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
   </header>
