--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="JavaScript/navbar.js"></script>
     <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
+    <link rel="stylesheet" type="text/css" href="CSS/Home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Black And White Picture' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Jim Nightshade' rel='stylesheet'>
     <title>ViCoDa</title>
 </head>
 <body>
@@ -26,5 +29,12 @@
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
   </header>
+
+  <main>
+    <article class="bg"> 
+      <h1> WELCOME TO ViCoDa</h1>
+      <h3> A website dedicated to exploring data visualisation</h3>
+    </article>
+  </main>
 </body>
 </html>
