--- a/References/index.html
+++ b/References/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <nav class="navbar" id="myNav">
-      <a href="References/" >References</a>
+      <a href="References/" class="active">References</a>
       <a href="CreativeWork/">Creative Work</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
@@ -22,7 +22,7 @@
           <a href="#">More coming soon</a>
         </section>
       </article> 
-      <a href="#" class="active">Home</a>
+      <a href="#">Home</a>
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
   </header>
