--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,10 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>ViCoDa</title>
 </head>
+
 <body>
   <header>
     <nav class="navbar" id="myNav">
-      <a href="References/" >References</a>
+      <a href="../References/index.html" >References</a>
       <a href="CreativeWork/" class="active">Creative Work</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
