--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>ViCoDa</title>
+    <meta name= "description" content="This is a website dedicated to exploring data visualisation. This website was created by student 1771810 , Wits University 2020"/>
+    <meta name="keywords" content="Data Visualisation, blog, interactive media, Digitial Arts, Student 1771810, interactive media 3, WSOA4174"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="JavaScript/navbar.js"></script>
@@ -7,9 +11,9 @@
     <link rel="stylesheet" type="text/css" href="CSS/Home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Black And White Picture' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Jim Nightshade' rel='stylesheet'>
-    <title>ViCoDa</title>
+    <link href='https://fonts.googleapis.com/css?family=Jim Nightshade' rel='stylesheet'>    
 </head>
+
 <body>
   <header>
     <nav class="navbar" id="myNav">
