--- a/References/index.html
+++ b/References/index.html
@@ -1,16 +1,21 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>ViCoDa</title>
+    <meta name= "description" content="This is a list of refernces for images used throughout the blog"/>
+    <meta name="keywords" content="Data Visualisation, blog, interactive media, Digitial Arts, Student 1771810, interactive media 3, WSOA4174"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="JavaScript/navbar.js"></script>
     <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>ViCoDa</title>
+    
 </head>
+
 <body>
   <header>
     <nav class="navbar" id="myNav">
-      <a href="References/" class="active">References</a>
+      <a href="index.html" class="active">References</a>
       <a href="CreativeWork/">Creative Work</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
@@ -26,5 +31,15 @@
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
   </header>
+
+  <main>
+    <h1>Blog Image References</h1>
+    <p>Busz, L. 2019
+      <cite>How to facilitate understanding of data? Data visualization [Examples and tools]</cite> [IMage] Available at: 
+      <a href= "https://medium.com/wrocode/how-to-facilitate-understanding-of-data-data-visualization-examples-and-tools-c07405bef679">
+        "https://medium.com/wrocode/how-to-facilitate-understanding-of-data-data-visualization-examples-and-tools-c07405bef679"</a> (Accessed 3 April 2020)
+   </p>   
+  </main>
+  
 </body>
 </html>
