--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="JavaScript/navbar.js"></script>
     <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
-    <link rel="stylesheet" type="text/css" href="CSS/Home.css">
+    <link rel="stylesheet" type="text/css" href="CSS/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Black And White Picture' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Jim Nightshade' rel='stylesheet'>    
