--- a/Blogs/TheoriesOfRepresentation.html
+++ b/Blogs/TheoriesOfRepresentation.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../CSS/Post.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="JavaScript/navbar.js"></script>
-    <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
+    <script type="module" src="../JavaScript/navbar.js"></script>
+    <link rel="stylesheet" type="text/css" href="../CSS/navbar.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
           <a href="#">More coming soon</a>
         </section>
       </article> 
-      <a href="#">Home</a>
+      <a href="../index.html">Home</a>
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
   </header>
