--- a/References/index.html
+++ b/References/index.html
@@ -6,8 +6,8 @@
     <meta name="keywords" content="Data Visualisation, blog, interactive media, Digitial Arts, Student 1771810, interactive media 3, WSOA4174"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="module" src="JavaScript/navbar.js"></script>
-    <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
+    <script type="module" src="../JavaScript/navbar.js"></script>
+    <link rel="stylesheet" type="text/css" href="../CSS/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 </head>
@@ -22,12 +22,12 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <section class="ddc">
-          <a href="#">Reflection: Chapter 1(Theories of Representation)</a>
+          <a href="../Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
           <a href="#">Analysis: Historic Data Visualisation</a>
           <a href="#">More coming soon</a>
         </section>
       </article> 
-      <a href="#">Home</a>
+      <a href="../index.html">Home</a>
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
   </header>
