--- a/Blogs/TheoriesOfRepresentation.html
+++ b/Blogs/TheoriesOfRepresentation.html
@@ -5,7 +5,7 @@
     <meta name= "description" content="This is a blog post consisting of a reflection and analysis of 'Theories of representation' from Kidd, J. (2015) "/>
     <meta name="keywords" content="Data Visualisation, blog, interactive media, Digitial Arts, Student 1771810, interactive media 3, WSOA4174"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" media="print">
-    <link rel="stylesheet" type="text/css" href="../CSS/Post.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/Blog.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="../JavaScript/navbar.js"></script>
