--- a/References/index.html
+++ b/References/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="../JavaScript/navbar.js"></script>
     <link rel="stylesheet" type="text/css" href="../CSS/navbar.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/Blog.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
 </head>
@@ -33,9 +34,9 @@
   </header>
 
   <main>
-    <h1>Blog Image References</h1>
+    <h1 class="content" style="max-width:600px">Blog Image References</h1>
     <p>Busz, L. 2019
-      <cite>How to facilitate understanding of data? Data visualization [Examples and tools]</cite> [IMage] Available at: 
+      <cite>How to facilitate understanding of data? Data visualization [Examples and tools]</cite> [Image] Available at: 
       <a href= "https://medium.com/wrocode/how-to-facilitate-understanding-of-data-data-visualization-examples-and-tools-c07405bef679">
         "https://medium.com/wrocode/how-to-facilitate-understanding-of-data-data-visualization-examples-and-tools-c07405bef679"</a> (Accessed 3 April 2020)
    </p>   
