--- a/Blogs/TheoriesOfRepresentation.html
+++ b/Blogs/TheoriesOfRepresentation.html
@@ -16,7 +16,7 @@
   <header>
     <nav class="navbar" id="myNav">
       <a href="../References/index.html" >References</a>
-      <a href="CreativeWork/">Creative Work</a>
+      <a href="../CreativeWork/index.html">Creative Work</a>
       <article class="dropdown">
         <button class="dropbtn" class="active">Blogs 
           <i class="fa fa-caret-down"></i>
@@ -24,7 +24,6 @@
         <section class="ddc">
           <a href="TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
           <a href="#">Analysis: Historic Data Visualisation</a>
-          <a href="#">More coming soon</a>
         </section>
       </article> 
       <a href="../index.html">Home</a>
