--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -13,7 +13,7 @@
   <header>
     <nav class="navbar" id="myNav">
       <a href="../References/index.html" >References</a>
-      <a href="CreativeWork/" class="active">Creative Work</a>
+      <a href="index.html" class="active">Creative Work</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
@@ -21,7 +21,6 @@
         <section class="ddc">
           <a href="../Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
           <a href="#">Analysis: Historic Data Visualisation</a>
-          <a href="#">More coming soon</a>
         </section>
       </article> 
       <a href="../index.html">Home</a>
