--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
     <link rel="stylesheet" type="text/css" href="CSS/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Black And White Picture' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Jim Nightshade' rel='stylesheet'>    
+    <link href='https://fonts.googleapis.com/css?family=Codystar' rel='stylesheet'>   
 </head>
 
 <body>
   <header>
     <nav class="navbar" id="myNav">
-      <a href="References/" >References</a>
-      <a href="CreativeWork/">Creative Work</a>
+      <a href="References/index.html" >References</a>
+      <a href="CreativeWork/index.html">Creative Work</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
@@ -26,7 +25,6 @@
         <section class="ddc">
           <a href="#">Reflection: Chapter 1(Theories of Representation)</a>
           <a href="#">Analysis: Historic Data Visualisation</a>
-          <a href="#">More coming soon</a>
         </section>
       </article> 
       <a href="#" class="active">Home</a>
@@ -34,11 +32,10 @@
     </nav>
   </header>
 
-  <main>
-    <article class="bg"> 
+  <article class="bg"> 
       <h1> WELCOME TO ViCoDa</h1>
       <h3> A website dedicated to exploring data visualisation</h3>
-    </article>
-  </main>
+      <h4> By Student 1771810</h4>
+  </article>
 </body>
 </html>
