--- a/References/index.html
+++ b/References/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav class="navbar" id="myNav">
       <a href="index.html" class="active">References</a>
-      <a href="CreativeWork/">Creative Work</a>
+      <a href="../CreativeWork/index.html">Creative Work</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
@@ -25,7 +25,6 @@
         <section class="ddc">
           <a href="../Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
           <a href="#">Analysis: Historic Data Visualisation</a>
-          <a href="#">More coming soon</a>
         </section>
       </article> 
       <a href="../index.html">Home</a>
@@ -34,7 +33,7 @@
   </header>
 
   <main>
-    <h1 class="content" style="max-width:600px">Blog Image References</h1>
+    <h1 class="content" style="max-width:600px;">Blog Image References</h1>
     <p>Busz, L. 2019
       <cite>How to facilitate understanding of data? Data visualization [Examples and tools]</cite> [Image] Available at: 
       <a href= "https://medium.com/wrocode/how-to-facilitate-understanding-of-data-data-visualization-examples-and-tools-c07405bef679">
