--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <section class="ddc">
-          <a href="#">Reflection: Chapter 1(Theories of Representation)</a>
-          <a href="#">Analysis: Historic Data Visualisation</a>
+          <a href="../Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
+          <a href="../Blogs/TheoriesOfRepresentation.html">Analysis: Historic Data Visualisation</a>
         </section>
       </article> 
       <a href="#" class="active">Home</a>
