--- a/References/index.html
+++ b/References/index.html
@@ -23,8 +23,8 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <section class="ddc">
-          <a href="../Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
-          <a href="#">Analysis: Historic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoryOfDataVisualisation.html">Analysis: Historic Data Visualisation</a>
         </section>
       </article> 
       <a href="../index.html">Home</a>
