--- a/Blogs/TheoriesOfRepresentation.html
+++ b/Blogs/TheoriesOfRepresentation.html
@@ -17,13 +17,15 @@
     <nav class="navbar" id="myNav">
       <a href="../References/index.html" >References</a>
       <a href="../CreativeWork/index.html">Creative Work</a>
+      <a href="../About/index.html">About</a>
       <article class="dropdown">
         <button class="dropbtn" class="active">Blogs 
           <i class="fa fa-caret-down"></i>
         </button>
         <section class="ddc">
-          <a href="TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
-          <a href="#">Analysis: Historic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoryOfDataVisualisation.html">Analysis: Historic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
       </article> 
       <a href="../index.html">Home</a>
