--- a/CreativeWork/index.html
+++ b/CreativeWork/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>ViCoDa</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="../JavaScript/navbar.js"></script>
     <link rel="stylesheet" type="text/css" href="../CSS/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>ViCoDa</title>
+    
 </head>
 
 <body>
@@ -14,13 +15,15 @@
     <nav class="navbar" id="myNav">
       <a href="../References/index.html" >References</a>
       <a href="index.html" class="active">Creative Work</a>
+      <a href="../About/index.html">About</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
         </button>
         <section class="ddc">
-          <a href="../Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
-          <a href="#">Analysis: Historic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoryOfDataVisualisation.html">Analysis: Historic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
       </article> 
       <a href="../index.html">Home</a>
