--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <nav class="navbar" id="myNav">
       <a href="References/index.html" >References</a>
       <a href="CreativeWork/index.html">Creative Work</a>
+      <a href="About/index.html">About</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
