--- a/References/index.html
+++ b/References/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ViCoDa</title>
+    <title>ViCoDa Site References</title>
     <meta name= "description" content="This is a list of refernces for images used throughout the blog"/>
     <meta name="keywords" content="Data Visualisation, blog, interactive media, Digitial Arts, Student 1771810, interactive media 3, WSOA4174"/>
     <meta charset="UTF-8">
@@ -18,6 +18,7 @@
     <nav class="navbar" id="myNav">
       <a href="index.html" class="active">References</a>
       <a href="../CreativeWork/index.html">Creative Work</a>
+      <a href="../About/index.html">About</a>
       <article class="dropdown">
         <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
@@ -25,6 +26,7 @@
         <section class="ddc">
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoryOfDataVisualisation.html">Analysis: Historic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
       </article> 
       <a href="../index.html">Home</a>
