--- a/Blogs/TheoriesOfRepresentation.html
+++ b/Blogs/TheoriesOfRepresentation.html
@@ -44,50 +44,80 @@
   the theoretical orientation, identify the proposed thesis in the article, and evaluate my findings.</p>
 
 <p>In her article, Kidd begins by acknowledging that there have been many debates surrounding the topic of representation, many of which 
-  have contributed to complicating the concept. Through her article she aims to demonstrate that “Representation is no straightforward 
-  window on the world” (Kidd, 2015:19). Furthermore, Kidd advances her thesis in that <cite>“representation is constructive, resilient, 
-    and implicated in the forging of identities, cultures, communities and in the articulation of difference.” </cite>(Kidd, 2015:19).</p>
-
-<p> Through the use of case analysis to support her key arguments, Kidd reflects on representation in five main points of discussion. 
-  These points being representation and reality; representation and myth; representation and visual culture; representation as persuasion; 
-  and representation and identity politics. Kidd’s identified theoretical standpoint is in reference to Jen Webb’s statement (Webb, 2009:3) 
-  in that <cite>“we live immersed in representation: it is how we understand our environments and each other. It is also how we both are , 
-    and how we understand ourselves; representation is implicated in the process of me becoming me.”<cite>. In this, Webb demonstrates the 
-      importance of representation in contributing to the configuration of concepts of selfhood, social encounters and embodiment.</p>
+  have contributed to complicating the concept. Through her article, she aims to demonstrate that <cite>“Representation is no 
+    straightforward window on the world”</cite> (Kidd, 2015:19). Kidd achieves this by making use of case analysis to support her key 
+    arguments. Kidd reflects on representation in five key points of discussion. These points being representation and reality; 
+    representation and myth; representation and visual culture; representation as persuasion; and representation and identity politics. 
+    Kidd’s identified theoretical standpoint is about Jen Webb’s statement (Webb, 2009:3) in that <cite>“we live immersed in representation: 
+      it is how we understand our environments and each other. It is also how we both are, and how we understand ourselves; representation 
+      is implicated in the process of me becoming me.”<cite>. In this, Webb demonstrates the importance of representation in contributing 
+        to the configuration of concepts of selfhood, social encounters, and embodiment.</p>
 
 <p> Within her discussion of representation and reality, Kidd begins by establishing that media and cultural texts make use of signs and 
-  codes to form a reality, furthermore, that this reality then<cite>”features a brief sojourn into semiology”</cite>(Kidd, 2015:19). 
+  codes to form reality, furthermore, that this reality then<cite>” features a brief sojourn into semiology”</cite>(Kidd, 2015:19). 
   In reference to the texts used to form reality, Kidd reflects on Daniel Chandler in stating that <cite>“texts can be any ‘assemblage 
-    of signs’” (Kidd, 2015:19).</cite> This statements asserts that text is not limited to written text rather any collection of code and 
+    of signs’” (Kidd, 2015:19).</cite> This statement asserts that text is not limited to written text rather any collection of code and 
     symbols that formulate a form of representation and thus reality. Expanding further on the concepts of representation and reality, 
-    Kidd asserts that our ideas of reality are formed through text and language, as opposed to <cite> "reality existing before language gives 
-      word to it” (Kidd, 2015:20). </cite> </p>
+    Kidd asserts that our ideas of reality are formed through text and language, as opposed to <cite> "reality existing before language 
+      gives word to it” (Kidd, 2015:20). </cite> </p>
 
-<p>Notably, Kidd advances that in themselves signs don’t have meaning, but rather obtain their meaning <cite>”by virtue of its difference 
-  from all other signs.” (Kidd, 2015:21). To this end, I begin to fully recognize how the assemblage of signs and codes are able to produce 
-  meaning in text, that ultimately leads to the formulation of reality.</p>
+<p>Notably, Kidd advances that in themselves signs don’t have meaning, but rather obtain their meaning <cite> "by virtue of its difference 
+  from all other signs.” (Kidd, 2015:21). To this end, I begin to fully recognize how the assemblage of signs and codes can produce meaning 
+  in a text, that ultimately leads to the formulation of reality.</p>
 
 <p> Although giving meaning to texts that formulate reality, in her discussion about representation and myth, Kidd establishes that semiotics 
-  have a denotative and connotative associations. In my understanding, I was able to interpret that in the denotative context the signs and 
-  codes closely reflect a reality. However, in connotative context signs and codes reflect a reality that is based on, often subjective, 
+  have denotative and connotative associations. In my understanding, I was able to interpret that in the denotative context, the signs and 
+  codes closely reflect reality. However, in the connotative context, signs, and codes reflect a reality that is based on, often subjective, 
   perceptions. The impact of the subjectivity associated with connotations of text, is further reflected in Kidd’s assertion (Kidd, 2015:24) 
-  in that <cite> “the bringing together of signs and their connotations”</cite>, result in, <cite>“the making of ‘myth’”</cite><p>
+  in that <cite> “the bringing together of signs and their connotations”</cite>, result in, <cite>“the making of ‘myth’”</cite></p>
 
-<p> In her discussion of representation and myth, Kidd begins to highlights the ambiguity of signs and codes in text. However, 
-  in her discussion of representation and visual communication, she demonstrates that <cite> “visual communication can be understood 
-    as more ambiguous, suggestive and open to multiple interpretations than other forms of communication.” (Kidd, 2015:26).</p>
+<p> In evaluating Kidd’s analysis of representation and myth, I noticed the ambiguity of signs and codes in text. However, in her discussion 
+  of representation and visual communication, she demonstrates that <cite> “visual communication can be understood as more ambiguous, 
+    suggestive and open to multiple interpretations than other forms of communication.” (Kidd, 2015:26). Visual communication can be 
+    presented in various formats. Each of the formats which they are presented on influences how visual communication is interpreted.</p>
 
+<p> In today’s digital society there are many modes through which visual communication can be presented, increasing the number of ways that 
+  it can be interpreted. Kidd reflects on Walter Benjamin in emphasizing that, with the various modes through which visual communication can 
+  be presented, there has been a subsequent impact on the aura of content. In Benjamin’s words, Kidd asserts that <cite>“Even the most perfect 
+    reproduction of a work of art is lacking in one element; its presence in time and space its unique existence at the place where it happens 
+    to be”</cite> (Benjamin, 1955:29). In other words, with the reproductions of various visual communications, the aura of each communication 
+    has changed or been entirely lost. I have come to understand, through studying Benjamin’s article, that the aura of artwork or a form of 
+    visual communication can contribute to how individuals perceive the artwork or visual communication. Therefore, in a time of mass 
+    reproduction, when visual communication elements lose their aura, individuals can misinterpret the message</p>
 
-<p><strong>(563 Words)</strong></p>
+<p>In her discussion about representation as persuasion, Kidd reflects on how consumers can be convinced and persuaded through how we 
+  perceive and interpret that which has been presented to us. In stating that, <cite> “it is in more subtle ways that advertising seduces us; 
+    through association, often unspoken, just hinted at, and we as consumers fill in the rest.”</cite> (Kidd, 2015:33), Kidd demonstrates how 
+    through minor indications in how content is presented, that stimulates consumer perceptions, and thus, influences buying decisions. 
+    Representation acts as a basis for persuasion. </p> 
+
+<p> The opportunity for ambiguity and persuasion in representation leads us to consider the possible political concerns related to 
+  representation. T provide clarity on the political standpoint of the discussion Kidd clarifies by stating that <cite> “to say something 
+    is political is to note that it can never be neutral or a-historical, even when it might appear to be ambivalent.”</cite> (Kidd, 2015:37). 
+    One of the main reasons why representation can be political is because it is ever-changing and is open for interpretation. 
+    Through this, there is an indication as to how the outcome and possible power dynamics created by representation, can be intense. 
+    Kidd asserts this in her statement that representations can <cite>“become battlegrounds for struggles over meaning within society, 
+      over what is deemed acceptable, what is unsayable, what is punishable.”</cite> (Kidd’ 2015:39). </p>
+
+<p>In reading and reflecting on the theories of representation, I was able to interpret how broad the concept of representation is, moreover, 
+how it is a vital part of human embodiment. Representation is a large part of how we perceive reality, similarly our perceptions and 
+interpretations of reality and how it is being presented breeds opportunity for myth. Throughout human history, visual communication 
+has been a part of human interaction, and in it, leaving even more ambiguity in meaning and thus understanding. With that being said, 
+there have been various uses of visual communication for persuasion causing one to reflect on the politics of representation.  
+Through this article, Kidd has adequately advanced her thesis, in that, <cite>“representation is constructive, resilient, and implicated 
+  in the forging of identities, cultures, communities and in the articulation of difference.” </cite>(Kidd, 2015:19).</p>
+
+<p><strong>(1083 Words)</strong></p>
     </section>
 
     <!-- References -->
     <section style="max-width: 600px; margin: auto;">
         <h2><strong>References</strong></h2>
             
-        <p>Robinson,L., Cotten, R., Ono, H., Quan-Haase, A., Mesch, G., Chen, W., Schulz, J., Hale, T., Stern, M. (2015) 
-            <cite> Digital inequalities and why they matter, Information, Communication & Society<cite>, 
-                18:5, 569-582, DOI: <a href= "10.1080/1369118X.2015.1012532">10.1080/1369118X.2015.1012532</a> (Accessed 3 June 2020)</p>
+        <p>Kidd,J. (2015) 
+        <cite> Theories Of Representation<cite> [Online]
+        <a href= "https://wits-e.wits.ac.za/access/content/group/WSOA3029-2020-SM2/Week%202/Kidd%20-%202015%20-%20Representation%20Ch1%20Theories%20of%20Representation.pdf">
+          https://wits-e.wits.ac.za/access/content/group/WSOA3029-2020-SM2/Week%202/Kidd%20-%202015%20-%20Representation%20Ch1%20Theories%20of%20Representation.pdf</a> (Accessed 27 July 2020)</p>
     </section>  
     
     <!-- Pagination -->
