--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name= "description" content="This is a website dedicated to exploring data visualisation. This website was created by student 1771810 , Wits University 2020"/>
     <meta name="keywords" content="Data Visualisation, blog, interactive media, Digitial Arts, Student 1771810, interactive media 3, WSOA4174"/>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" media="print">
     <script type="module" src="JavaScript/navbar.js"></script>
     <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
     <link rel="stylesheet" type="text/css" href="CSS/home.css">
