--- a/Blogs/TheoriesOfRepresentation.html
+++ b/Blogs/TheoriesOfRepresentation.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <nav class="navbar" id="myNav">
+    <nav class="navbar" id="myNav" style="background-color: white;">
       <a href="../References/index.html" >References</a>
       <a href="../CreativeWork/index.html">Creative Work</a>
       <a href="../About/index.html">About</a>
