--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   </header>
 
   <article class="bg"> 
-      <h1> WELCOME TO ViCoDa</h1>
-      <h3> A website dedicated to exploring data visualisation</h3>
-      <h4> By Student 1771810</h4>
+      <h1 class="glow"> WELCOME TO ViCoDa</h1>
+      <h3 class="glow"> A website dedicated to exploring data visualisation</h3>
+      <h4 class="glow"> By Student 1771810</h4>
   </article>
 </body>
 </html>
