--- a/About/index.html
+++ b/About/index.html
@@ -40,16 +40,17 @@
     <article style="margin-left: 7%; margin-right: 7%;">
      <h2>About The Website</h2>
      <h3>Exploring Data Visualisation</h3>
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+     <p>The formation, circulation, and adaptation of information have allowed for the embodiment of the information society (Rouse, 2005:1), as a result, information has become a vital part of society and how we understand our surroundings (Webb, 2009:3). Data visualisation and data art are methods that have helped in forming a visual representation of our information, so we may better interpret it. According to the website ‘Tableau’, data visualization is defined as <cite> “the graphical representation of information and data. By using visual elements like charts, graphs, and maps, data visualization tools provide an accessible way to see and understand trends, outliers, and patterns in data. ” </cite> (Tableau 2020). </p>
+     <p>In their book, Matthew Ward, Georges Grinstein, and Daniel Keim demonstrate that data visualisation is more than a representation, it is also a way of communicating. Ward et al, advances that <cite> “visualisation is the communication of information using graphical representation” </cite> (Ward et al 2010). Furthermore, they demonstrate that through images we are better able to understand and interpret large quantities of information and that <cite> “Pictures can also be independent of local languages, as a graph or a map may be understood by a group of people with no common tongue” </cite> (Ward et al 2010).</p>
      
      <section class="row">
      <article class="column1">
       <img src="../Images/datavisabout.jpg" alt="example of data visualisation" width="600" height="550">
      </article>
      <article class="column2">
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+      <p>Although data visualisation provides the opportunity for communication it also places an opportunity for artistic expression through the way in which the data is communicated, introducing the concept of data art. Maxence Grugier states that <cite> “by blurring boundaries between art and information, data art dispels the myth of the romantic artist while offering a fundamental artistic act in a critical commentary of the digital age in which we live.” </cite> (Grugier 2016). </p>
+      <p>From my understanding data visualisation places emphasis on representing information appropriately to communicate the information to the viewer. However, data art places emphasis on exploring the creative aspect and artistic possibilities that can be explored in how we represent data. In short, data visualisation focuses on what, whereas, data art focuses on how. Through this website, I aim to make equal use of both. Ensuring that I communicate the data realistically whilst exploring the creative possibilities behind the representation, without losing the meaning and message of the data. </p>
+      <p>Currently, on the website, I have two main sections being the blog posts and the creative work. The blog posts are dedicated to theoretical engagement surrounding data visualisation and data art, whereas, the creative work is dedicated to implementing and demonstrating practical engagement with the theory whilst aiming for artistic and technical exploration.</p>
      </article>
      </section>
      </article>
@@ -57,14 +58,14 @@
      <section class="row">
       <article class="column">
         <section class="card">
-          <h3>2+</h3>
+          <h3>4+</h3>
           <p>Blogs</p>
         </section>
       </article>
     
       <article class="column">
         <section class="card">
-          <h3>1+</h3>
+          <h3>2+</h3>
           <p>Creative Projects</p>
         </section>
       </article>
