--- a/About/index.html
+++ b/About/index.html
@@ -53,6 +53,16 @@
       <p>Currently, on the website, I have two main sections being the blog posts and the creative work. The blog posts are dedicated to theoretical engagement surrounding data visualisation and data art, whereas, the creative work is dedicated to implementing and demonstrating practical engagement with the theory whilst aiming for artistic and technical exploration.</p>
      </article>
      </section>
+
+     <section style="text-align: center;">
+       <article style="padding-top: 3%; padding-bottom: 2%;">
+       <p><strong>Interesting fact: The website name was derived from forming an acronym of the words ‘Visualizing Coronavirus Data’.</strong></p>
+       </article>
+
+       <article>
+       <h4><a href="../References/index.html">References</a> </h4>
+       </article>
+     </section>
      </article>
     
      <section class="row">
