--- a/Blogs/TheoriesOfRepresentation.html
+++ b/Blogs/TheoriesOfRepresentation.html
@@ -115,7 +115,7 @@ Through this article, Kidd has adequately advanced her thesis, in that, <cite>â€
         <h2><strong>References</strong></h2>
             
         <p>Kidd,J. (2015) 
-        <cite> Theories Of Representation<cite> [Online]
+        <cite> Theories Of Representation<cite> [Online] Available at:
         <a href= "https://wits-e.wits.ac.za/access/content/group/WSOA3029-2020-SM2/Week%202/Kidd%20-%202015%20-%20Representation%20Ch1%20Theories%20of%20Representation.pdf">
           https://wits-e.wits.ac.za/access/content/group/WSOA3029-2020-SM2/Week%202/Kidd%20-%202015%20-%20Representation%20Ch1%20Theories%20of%20Representation.pdf</a> (Accessed 27 July 2020)</p>
     </section>  
