--- a/Blogs/HistoryOfDataVisualisation.html
+++ b/Blogs/HistoryOfDataVisualisation.html
@@ -19,7 +19,7 @@
       <a href="../CreativeWork/index.html">Creative Work</a>
       <a href="../About/index.html">About</a>
       <article class="dropdown">
-        <button class="dropbtn" class="active">Blogs 
+        <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
         </button>
         <section class="ddc">
