--- a/Blogs/TheoriesOfRepresentation.html
+++ b/Blogs/TheoriesOfRepresentation.html
@@ -19,7 +19,7 @@
       <a href="../CreativeWork/index.html">Creative Work</a>
       <a href="../About/index.html">About</a>
       <article class="dropdown">
-        <button class="dropbtn" class="active">Blogs 
+        <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
         </button>
         <section class="ddc">
@@ -27,7 +27,7 @@
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoryOfDataVisualisation.html">Analysis: Historic Data Visualisation</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
-      </article> 
+      </article>  
       <a href="../index.html">Home</a>
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
