--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -9,18 +9,18 @@
     <script type="module" src="../JavaScript/navbar.js"></script>
     <link rel="stylesheet" type="text/css" href="../CSS/navbar.css">
     <link rel="stylesheet" type="text/css" href="../CSS/Blog.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/wireframes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
 </head>
 
 <body>
   <header>
-    <nav class="navbar" id="myNav">
+    <nav class="navbar" id="myNav" style="background-color: white;">
       <a href="../References/index.html" >References</a>
       <a href="../CreativeWork/index.html">Creative Work</a>
       <a href="../About/index.html">About</a>
       <article class="dropdown">
-        <button class="dropbtn" class="active">Blogs 
+        <button class="dropbtn">Blogs 
           <i class="fa fa-caret-down"></i>
         </button>
         <section class="ddc">
@@ -35,7 +35,35 @@
   </header>
 
   <main>
-    <!--Insert WireFrames Here-->>  
+    <h1>Website Wireframes</h1>
+
+    <h2>Home Page Wireframe</h2>
+    <section class="wireframes">
+      <img src="../Images/Homepage Wireframe.png" alt="Wireframe reflecting home page layout and commentary" width="700" height="100%">
+    </section>
+
+    <h2>About Page Wireframe</h2>
+    <section class="wireframes">
+      <img src="../Images/About page Wireframe.png" alt="Wireframe reflecting about page layout and commentary" width="700" height="100%">
+    </section>
+
+    <h2>Blog Page Wireframe</h2>
+    <section class="wireframes">
+      <img src="../Images/Blog Posts Wireframe.png" alt="Wireframe reflecting blog post page layout and commentary" width="700" height="100%">
+    </section>
+
+    <h2>Reference Page Wireframe</h2>
+    <section class="wireframes">
+      <img src="../Images/References Wireframe.png" alt="Wireframe reflecting reference page layout and commentary" width="700" height="100%">
+    </section>
+
+    <section style="max-width:700px; margin:auto;">
+    <h1>Website Wireframes Reflection And Proposed UI</h1>
+    <p>My goal for the website design is to achieve simplistic sophistication. To not overwhelm users, whilst attaining their attention and 
+      curiosity. I hoped to ensure that navigation is also kept simple and minimal. Currently, the most exciting and eye catching part of 
+      the website is the homepage and the graphs. Most of the creative and technical exploration will be demonstrated in the formation of 
+      the data visualization.</p>
+    </section>
   </main>
   
 </body>
