--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <section class="ddc">
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoryOfDataVisualisation.html">Analysis: Historic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
-      </article> 
+      </article>  
       <a href="#" class="active">Home</a>
       <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
