--- a/About/index.html
+++ b/About/index.html
@@ -24,8 +24,10 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <section class="ddc">
-          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories of Representation)</a>
-          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoryOfDataVisualisation.html">Analysis: Historic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/TheoriesOfRepresentation.html">Reflection: Chapter 1(Theories Of Representation)</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoricDataVisualisation.html">Analysis: Historic Data Visualisation</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/CommunicatingData.html">Reflection: Chapter 9(Communicating Data To An Audience)</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/InformationIsBeautiful.html"> Bonus Analysis: Information Is Beautiful</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
       </article>  
