--- a/Blogs/CommunicatingData.html
+++ b/Blogs/CommunicatingData.html
@@ -124,11 +124,14 @@ Through this article, Kidd has adequately advanced her thesis, in that, <cite>â€
     
     <!-- Pagination -->
     <section class="pagination">
-        <a href="TheoriesOfRepresentation.html">&laquo;</a>
-        <a href="TheoriesOfRepresentation.html" class="activeP">1</a>
-        <a href="#">2</a>
-         <a href="#">&raquo;</a>
-    </section>
+      <a href="HistoricDataVisualisation.html">&laquo;</a>
+      <a href="TheoriesOfRepresentation.html">1</a>
+      <a href="HistoricDataVisualisation.html">2</a>
+      <a href="CommunicatingData.html" class="activeP">3</a>
+      <a href="InformationIsBeautiful.html">4</a>
+      <a href="WireFrames.html">5</a>
+       <a href="InformationIsBeautiful.html">&raquo;</a>
+  </section>
 
   </main>
 
