--- a/Blogs/HistoricDataVisualisation.html
+++ b/Blogs/HistoricDataVisualisation.html
@@ -54,11 +54,14 @@
     
     <!-- Pagination -->
     <section class="pagination">
-        <a href="TheoriesOfRepresentation.html">&laquo;</a>
-        <a href="TheoriesOfRepresentation.html" class="activeP">1</a>
-        <a href="#">2</a>
-         <a href="#">&raquo;</a>
-    </section>
+      <a href="TheoriesOfRepresentation.html">&laquo;</a>
+      <a href="TheoriesOfRepresentation.html">1</a>
+      <a href="HistoricDataVisualisation.html" class="activeP">2</a>
+      <a href="CommunicatingData.html">3</a>
+      <a href="InformationIsBeautiful.html">4</a>
+      <a href="WireFrames.html">5</a>
+       <a href="CommunicatingData.html">&raquo;</a>
+  </section>
 
   </main>
 
