--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -66,6 +66,16 @@
       the website is the homepage and the graphs. Most of the creative and technical exploration will be demonstrated in the formation of 
       the data visualization.</p>
     </section>
+
+    <!-- Pagination -->
+    <section class="pagination">
+      <a href="InformationIsBeautiful.html">&laquo;</a>
+      <a href="TheoriesOfRepresentation.html">1</a>
+      <a href="HistoricDataVisualisation.html">2</a>
+      <a href="CommunicatingData.html">3</a>
+      <a href="InformationIsBeautiful.html">4</a>
+      <a href="WireFrames.html" class="activeP">5</a>
+  </section>
   </main>
   
 </body>
