--- a/Blogs/HistoricDataVisualisation.html
+++ b/Blogs/HistoricDataVisualisation.html
@@ -27,6 +27,7 @@
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoricDataVisualisation.html">Analysis: Historic Data Visualisation</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/CommunicatingData.html">Reflection: Chapter 9(Communicating Data To An Audience)</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/InformationIsBeautiful.html"> Bonus Analysis: Information Is Beautiful</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/StyleGuide.html"> Website Style Guide</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
       </article> 
@@ -59,7 +60,8 @@
       <a href="HistoricDataVisualisation.html" class="activeP">2</a>
       <a href="CommunicatingData.html">3</a>
       <a href="InformationIsBeautiful.html">4</a>
-      <a href="WireFrames.html">5</a>
+      <a href="StyleGuide.html">5</a>
+      <a href="WireFrames.html">6</a>
        <a href="CommunicatingData.html">&raquo;</a>
   </section>
 
