--- a/Blogs/WireFrames.html
+++ b/Blogs/WireFrames.html
@@ -28,6 +28,7 @@
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/HistoricDataVisualisation.html">Analysis: Historic Data Visualisation</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/CommunicatingData.html">Reflection: Chapter 9(Communicating Data To An Audience)</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/InformationIsBeautiful.html"> Bonus Analysis: Information Is Beautiful</a>
+          <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/StyleGuide.html"> Website Style Guide</a>
           <a href="https://thelalakei.github.io/WSOA4174A_1771810/Blogs/WireFrames.html">WireFrames</a>
         </section>
       </article>  
@@ -74,7 +75,8 @@
       <a href="HistoricDataVisualisation.html">2</a>
       <a href="CommunicatingData.html">3</a>
       <a href="InformationIsBeautiful.html">4</a>
-      <a href="WireFrames.html" class="activeP">5</a>
+      <a href="StyleGuide.html">5</a>
+      <a href="WireFrames.html" class="activeP">6</a>
   </section>
   </main>
   
